# covid

./: .gitignore  README.md  pyproject.toml
data/: covidDB.sqlite  covid_ddl.sql
src/: covid.py  helper.py  main.py  postgres.py
